--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,5 @@
 #quero_doar {
-    background-image: url("./assets/background.png");
+    background-image: url("../assets/background.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
